--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ material3Android = "1.2.1"
 navigation = "2.7.7"
 coroutine = "1.8.1"
 koin = "3.5.6"
+uiTooling = "1.6.8"
 
 
 [libraries]
@@ -42,6 +43,7 @@ coroutine-core = { group = "org.jetbrains.kotlinx" , name = "kotlinx-coroutines-
 androidX-lifecycleCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin"}
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin"}
+ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 
 
 [plugins]
