--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ material3Android = "1.2.1"
 navigation = "2.7.7"
 coroutine = "1.8.1"
 koin = "3.5.6"
+roborazziGradlePlugin = "1.26.0"
 uiTooling = "1.6.8"
 datetime = "0.6.1"
 room = "2.6.1"
@@ -24,9 +25,12 @@ slf4j = "1.7.36"
 coil = "2.7.0"
 settings = "2.4.0"
 showkase = "1.0.3"
+roborazzi = "1.26.0"
 
 [libraries]
-
+android-gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+android-application-plugin = { group = "com.android.application", name = "com.android.application.gradle.plugin", version.ref = "agp" }
+android-library-plugin = { group = "com.android.library", name = "com.android.library.gradle.plugin", version.ref = "agp" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -56,6 +60,7 @@ coroutine-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-c
 androidX-lifecycleCompose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "lifecycle" }
 koin = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
 koin-compose = { group = "io.insert-koin", name = "koin-androidx-compose", version.ref = "koin" }
+roborazzi-gradle-plugin = { module = "io.github.takahirom.roborazzi:roborazzi-gradle-plugin", version.ref = "roborazziGradlePlugin" }
 ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "uiTooling" }
 kotlinx-datetime = { group = "org.jetbrains.kotlinx", name = "kotlinx-datetime", version.ref = "datetime" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
@@ -75,6 +80,11 @@ settings-extended = { group = "com.github.alorma.compose-settings", name = "ui-t
 showkase = { group = "com.airbnb.android", name = "showkase", version.ref = "showkase" }
 showkase-prosessor = { group = "com.airbnb.android", name = "showkase-processor", version.ref = "showkase" }
 
+robolectric = { group = "org.robolectric", name = "robolectric", version = "4.13" }
+roborazzi = { group = "io.github.takahirom.roborazzi", name = "roborazzi", version.ref = "roborazzi" }
+roborazzi-compose = { group = "io.github.takahirom.roborazzi", name = "roborazzi-compose", version.ref = "roborazzi" }
+roborazzi-rule = { group = "io.github.takahirom.roborazzi", name = "roborazzi-junit-rule", version.ref = "roborazzi" }
+
 
 [bundles]
 androidx-room = ["androidx-room-runtime", "androidx-room-ktx"]
@@ -83,6 +93,7 @@ ktor-client = ["ktor-client", "ktor-client-connect", "ktor-client-logging", "kto
 slf4j = ["slf4j-android"]
 coil = ["coil", "coil-compose"]
 settings = ["settings", "settings-extended"]
+roborazzi = ["roborazzi", "roborazzi-compose", "roborazzi-rule"]
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -91,4 +102,5 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+roborazzi-plugin = { id = "io.github.takahirom.roborazzi", version.ref = "roborazzi" }
 
