--- a/.github/workflows/compare-screenshotl.yaml
+++ b/.github/workflows/compare-screenshotl.yaml
@@ -13,6 +13,15 @@ jobs:
       actions: write
 
     steps:
+      - uses: actions/checkout@v4
+      - name: set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       ## mainブランチから変更前のスクリーンショットを取得
       - uses: actions/download-artifact@v4
         continue-on-error: true
