--- a/.github/workflows/UnitTest.yml
+++ b/.github/workflows/UnitTest.yml
@@ -17,8 +17,7 @@ jobs:
       actions: write # for upload-artifact
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@4
+      - uses: actions/checkout@v4
       - name: set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -27,14 +26,14 @@ jobs:
           cache: gradle
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - uses: dawidd6/action-download-artifact@2
+      - uses: dawidd6/action-download-artifact@v2
         continue-on-error: true
         with:
           name: screenshot
           workflow: UnitTest.yml
           branch: develop
       - run: ./gradlew recordRoborazziDebug --stacktrace
-      - uses: actions/upload-artifact@4
+      - uses: actions/upload-artifact@v4
         if: ${{ always() }}
         with:
           name: screenshot
