とりまテスト

--- a/.github/workflows/CompareScreenshot.yaml
+++ b/.github/workflows/CompareScreenshot.yaml
@@ -67,7 +67,6 @@ jobs:
       pull-requests: write # for creating a comment on pull requests
 
     runs-on: ubuntu-latest
-
     steps:
       - uses: dawidd6/action-download-artifact@246dbf436b23d7c49e21a7ab8204ca9ecd1fe615 # v2.27.0
         with:
@@ -82,7 +81,7 @@ jobs:
         id: checkout-main
         uses: actions/checkout@v4
         with:
-          ref: main
+          ref: develop
       - id: switch-companion-branch
         env:
           BRANCH_NAME: companion_${{ github.event.workflow_run.head_branch }}
