--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,6 +106,10 @@ commands:
         type: string
     steps:
       - run:
+          name: permission
+          command: |
+            chmod +x gradlew
+      - run:
           name: Unit test
           command: |
             ./gradlew compareRoborazziDebug --stacktrace
