--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,20 +188,20 @@ commands:
             files=$(find . -type f -path "./app/build/outputs/roborazzi/*" -name "*_compare.png")
             for file in $files; do
               fileName=$(basename "$file" | sed -r 's/(.{20})/\1<br>/g')
-              echo "| [$fileName](https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/blob/compare_$CIRCLE_BRANCH/$file) | ![](https://github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/blob/compare_$CIRCLE_BRANCH/$file?raw=true) |" >> comment
+              echo "| [$fileName](https://github.com/SnowDango/sumire/blob/compare_$CIRCLE_BRANCH/$file) | ![](https://github.com/SnowDango/sumire/blob/compare_$CIRCLE_BRANCH/$file?raw=true) |" >> comment
             done
       - run:
           name: Comment screenshot diff
           command: |
             if [ $IS_SKIPPING_VRT = "false" ]; then
               prNumber=$(echo $CIRCLE_PULL_REQUEST | sed "s:.*/::")
-              url="https://api.github.com/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/issues/${prNumber}/comments"
+              url="https://api.github.com/repos/SnowDango/sumire/issues/${prNumber}/comments"
               commentId=$(echo -n $(curl -s -H "Authorization: token $GITHUB_ACCESS_TOKEN" $url -v | jq '.[] | select(.body | test("^Snapshot diff report.*")) | .id'))
               failedComment="$(echo -e "Snapshot diff report\n:warning: **Failed to show Snapshot diff**\n$CIRCLE_BUILD_URL")"
             
               if [ -n "$commentId" ]; then
                 comment="$(cat ./comment)"
-                endpoint="/repos/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}/issues/comments/$commentId"
+                endpoint="/repos/SnowDango/sumire/issues/comments/$commentId"
                 gh api --method PATCH -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" $endpoint -f body="$comment" ||
                 gh api --method PATCH -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" $endpoint -f body="$failedComment"
               else
