--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ commands:
                 git checkout --orphan compare_$CIRCLE_BRANCH
                 git rm --cached -rf .
             
-                add_files=$(find . -type f -path "./app/build/outputs/roborazzi" -name "*_compare.png")
+                add_files=$(find . -type f -path "./app/build/outputs/roborazzi/*" -name "*_compare.png")
                 for file in $add_files; do
                   git add -f $file
                 done
