--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,7 +144,7 @@ commands:
             git checkout --orphan screenshots_$CIRCLE_BRANCH
             git rm --cached -rf .
             
-            add_files=$(find . -type f -path "./app/build/outputs/roborazzi/*")
+            add_files=$(find . -type f -path "./app/build/outputs/roborazzi")
             for file in $add_files; do
               git add -f $file
             done
