circleci save screenshot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,5 @@ workflows:
           filters:
             branches:
               only:
-                  "develop"
-                    "release/*"
-                    "master"
+                - "develop"
+                - "master"
