--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,10 @@ jobs:
       - store_artifacts:
           path: app/build/outputs/roborazzi
   vrt-test:
+    parameters:
+      target-branch:
+        type: string
+        default: ""
     executor:
       name: android/android-machine
       resource-class: large
@@ -70,4 +74,5 @@ workflows:
       not:
         equal: [ "", << pipeline.parameters.target-branch >> ]
     jobs:
-      - vrt-test
+      - vrt-test:
+          target-branch: << pipeline.parameters.target-branch >>
