circleci save screenshot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,9 @@ jobs:
           command: |
             mkdir -p app/build/outputs/roborazzi \
             artifacts=$(curl -H "Circle-Token: $CIRCLE_TOKEN" "https://circleci.com/api/v1.1/project/github/SnowDango/sumire/latest/artifacts?branch=<<parameters.target-branch>>&filter=completed") \
-            for artifact in $(echo $artifact | jq -c '.[]'); do curl -o app/build/outputs/roborazzi $(echo $artifact | jq -r '.url') done
+            for artifact in $(echo $artifact | jq -c '.[]'); do 
+              curl -o app/build/outputs/roborazzi $(echo $artifact | jq -r '.url') 
+            done
       - run:
           name: chmod gradlew
           command: |
