--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run:
           name: get artifacts
           command: |
-            mkdir -p app/build/outputs/roborazzi \
+            mkdir -p app/build/outputs/roborazzi | \
             curl -H "Circle-Token: $CIRCLE_TOKEN" "https://circleci.com/api/v1.1/project/github/SnowDango/sumire/latest/artifacts?branch=<<parameters.target-branch>>&filter=completed" | \
             jq -c '.[]' | while read artifact; do
               curl -o app/build/outputs/roborazzi $(echo $artifact | jq -r '.url') 
