--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 
 orbs:
   android: circleci/android@2.5.0
+  pr-comment: inari-build/pr-comment@0.0.25
 
 parameters:
   target-branch:
@@ -54,10 +55,31 @@ jobs:
           name: compare screenshot
           command: |
             ./gradlew compareRoborazziDebug --stacktrace
+      - run:
+          name: delete unnecessary files
+          command: |
+            ls app/build/outputs/roborazzi | grep -v -E "*_compare.png" | xargs rm -rf
       - store_artifacts:
           path: app/build/outputs/roborazzi
-
-
+  result-comment:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - checkout
+      - run:
+          name: create comment
+          command: |
+            echo "VRT Result" > comment
+            echo "| image |" >> comment
+            echo "|-------|" >> comment
+            curl -H "Circle-Token: $CIRCLE_TOKEN" "https://circleci.com/api/v2/project/github/SnowDango/sumire/$CIRCLE_BUILD_NUM/artifacts" | \
+            jq -c '.[]' | while read artifact; do
+              echo "| ![]($(echo $artifact | jq -r '.url')) |" >> comment
+            done
+      - pr-comment:
+          gh-user: "SnowDango"
+          gh-token: $GITHUB_TOKEN
+          comment: comment
 workflows:
   save-screenshot:
     jobs:
