circleci save screenshot

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
             echo "| file | image |" >> comment.txt
             echo "|----|-------|" >> comment.txt
             curl -H "Circle-Token: $CIRCLE_TOKEN" "https://circleci.com/api/v2/project/github/SnowDango/sumire/$CIRCLE_BUILD_NUM/artifacts" | \
-            jq -c '.[]' | while read artifact; do
+            jq -c '.items[]' | while read artifact; do
               echo "| $(echo $artifact | jq -r '.path') | ![]($(echo $artifact | jq -r '.url')) |" >> comment.txt
             done
       - run:
