--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,6 +69,7 @@ jobs:
           name: create result json file
           command: |
             curl -H "Circle-Token: $CIRCLE_TOKEN" "https://circleci.com/api/v2/project/github/SnowDango/sumire/$CIRCLE_BUILD_NUM/artifacts" --output artifact.json
+            cat artifact.json
       - persist_to_workspace:
           root: ./
           paths:
@@ -92,7 +93,7 @@ jobs:
             echo "VRT Result" > comment.txt
             echo "| file | image |" >> comment.txt
             echo "|----|-------|" >> comment.txt
-            echo artifact.json | \
+            cat artifact.json | \
             jq -c '.items[]' | while read artifact; do
               echo "| $(echo $artifact | jq -r '.path') | ![]($(echo $artifact | jq -r '.url')) |" >> comment.txt
             done
