--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 orbs:
   android: circleci/android@2.5.0
   gh: circleci/github-cli@2.3.0
+  github-app-token: ostk0069/github-app-token@0.1.0
 
 parameters:
   target-branch:
@@ -97,10 +98,14 @@ jobs:
             jq -c '.items[]' | while read artifact; do
               echo "| $(echo $artifact | jq -r '.path') | ![]($(echo $artifact | jq -r '.url')) |" >> comment.txt
             done
+      - github-app-token/fetch-token:
+          app_id: $GITHUB_APPS_ID
+          base64_private_key: $GITHUB_APPS_PRIVATE_KEY
+          installation_id: $GITHUB_APPS_INSTALL_ID
       - run:
           name: pull request comment
           command: |
-            echo "$GITHUB_ACCESS_TOKEN" | gh auth login --with-token
+            echo "$GITHUB_APP_TOKEN" | gh auth login --with-token
             gh pr comment "$CIRCLE_PULL_REQUEST" -F comment.txt
 workflows:
   save-screenshot:
