--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,9 +77,9 @@ jobs:
             - artifact.json
   result-comment:
     parameters:
-      pr-number:
+      github_install_id:
         type: integer
-        default: 0
+        default: ${GITHUB_APPS_INSTALL_ID}
     docker:
       - image: cimg/base:stable
     steps:
@@ -101,7 +101,7 @@ jobs:
       - github-app-token/fetch-token:
           app_id: $GITHUB_APPS_ID
           base64_private_key: $GITHUB_APPS_PRIVATE_KEY
-          installation_id: $GITHUB_APPS_INSTALL_ID
+          installation_id: << parameters.github_install_id >>
       - run:
           name: pull request comment
           command: |
