--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,24 @@ jobs:
           root: ./
           paths:
             - artifact.json
+      - run:
+          name: create branch
+          command: |
+            git push origin --delete screenshots_$CIRCLE_BRANCH || true
+            git checkout --orphan vrt_$CIRCLE_BRANCH
+      - run:
+          name: push compare file
+          command: |
+            git rm --cached -rf .
+            add_files=$(find . -type f -path "./app/build/outputs/roborazzi/*")
+            for file in $add_files; do
+              git add -f $file
+            done
+            echo -e "version: 2.1\njobs:\n no-op:\n  machine: true\n  steps:\n  - run: no-op\nworkflows:\n build:\n  jobs:\n   - no-op:\n      filters:\n       branches:\n        only: no-op" > .circleci/config.yml
+            git add -f .circleci/config.yml
+            git commit -m "Add screenshot"
+            git clean -df
+            git push origin HEAD:vrt_$CIRCLE_BRANCH -f
   result-comment:
     docker:
       - image: cimg/base:stable
@@ -102,7 +120,7 @@ jobs:
           name: pull request comment
           command: |
             echo "$GITHUB_APP_TOKEN" | gh auth login --with-token
-            gh pr comment "$CIRCLE_PULL_REQUEST" -F comment.txt
+            gh pr comment "$CIRCLE_PULL_REQUEST" -F comment.txt --edit-last
 workflows:
   save-screenshot:
     jobs:
