--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
           name: push compare file
           command: |
             git rm --cached -rf .
-            git add ./app/build/outputs/roborazzi/
+            git add -f ./app/build/outputs/roborazzi/
             echo -e "version: 2.1\njobs:\n no-op:\n  machine: true\n  steps:\n  - run: no-op\nworkflows:\n build:\n  jobs:\n   - no-op:\n      filters:\n       branches:\n        only: no-op" > .circleci/config.yml
             git add -f .circleci/config.yml
             git commit -m "Add screenshot"
