--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,11 +103,11 @@ jobs:
           command: |
             touch comment.txt
             echo "VRT Result" > comment.txt
-            echo "| file | image |" >> comment.txt
-            echo "|----|-------|" >> comment.txt
+            echo "| image |" >> comment.txt
+            echo "|-------|" >> comment.txt
             cat artifact.json | \
             jq -c '.items[]' | while read artifact; do
-              echo "| $(echo $artifact | jq -r '.path') | ![]($(echo $artifact | jq -r '.url')) |" >> comment.txt
+              echo "| ![](https://github.com/SnowDango/sumire/blob/vrt_$CIRCLE_BRANCH/$(echo $artifact | jq -r '.path')) |" >> comment.txt
             done
       - github-app-token/fetch-token:
           app_id: $GITHUB_APPS_ID
