--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
           name: pull request comment
           command: |
             echo "$GITHUB_APP_TOKEN" | gh auth login --with-token
-            comments=$(gh pr view "$CIRCLE_PULL_REQUEST" --comments --json comments --jq '.comments[]|select(contains({\"author\":{\"login\":\"sumireapps\"}))|length')
+            comments=$(gh pr view "$CIRCLE_PULL_REQUEST" --comments --json comments --jq '.comments[]|select(contains({"author":{"login":"sumireapps"}))|length')
             if [ $comments -gt 0 ]; then
               gh pr comment "$CIRCLE_PULL_REQUEST" -F comment.txt --edit-last
             else
